[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrp-nvdiffrast>=0.3.3.1",
    "einops>=0.8.1",
    "kaolin>=0.1",
    "kornia>=0.8.1",
    "numpy>=2.3.1",
    "omegaconf>=2.3.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pyrender>=0.1.45",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "trimesh>=4.7.0",
]
